Update blueprint to latest version and finally actually used it.

--- a/blueprints/automation/sbyx/wake-up-light-alarm-with-sunrise-effect.yaml
+++ b/blueprints/automation/sbyx/wake-up-light-alarm-with-sunrise-effect.yaml
@@ -102,7 +102,7 @@ variables:
   seconds: '{{float(sunrise_duration) * 60}}'
   min_mired: !input 'min_mired'
   start_mired: '{{state_attr(light_entity, ''max_mireds'')}}'
-  end_mired: '{{[state_attr(light_entity, ''min_mireds'')|int, min_mired|int]|max}}'
+  end_mired: '{{[state_attr(light_entity, ''min_mireds'')|int(0), min_mired|int(0)]|max}}'
   tick_time: '{{float(seconds) / float(range_brightness)}}'
   check_entity: !input 'check_entity'
 trigger:
@@ -110,14 +110,14 @@ trigger:
   minutes: '*'
 condition: []
 action:
-- wait_template: '{{sensor == ''none'' or as_timestamp(states(sensor)) != None}}'
+- wait_template: '{{sensor == ''none'' or as_timestamp(states(sensor), None) != None}}'
 - wait_template: '{{0 < as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
     ~ '' '' ~ manual_time) - as_timestamp(states(''sensor.date_time_iso'')) <= float(seconds)
     and states(check_entity) in [''unknown'', ''on'', ''home'']}}'
 - choose: []
   default: !input 'pre_sunrise_actions'
 - condition: template
-  value_template: '{{sensor == ''none'' or as_timestamp(states(sensor)) != None}}'
+  value_template: '{{sensor == ''none'' or as_timestamp(states(sensor), None) != None}}'
 - condition: template
   value_template: '{{0 < as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
     ~ '' '' ~ manual_time) - as_timestamp(now()) <= float(seconds) and states(check_entity)
@@ -138,16 +138,16 @@ action:
     entity_id: !input 'light_entity'
 - repeat:
     while:
-    - '{{sensor == ''none'' or as_timestamp(states(sensor)) != None}}'
+    - '{{sensor == ''none'' or as_timestamp(states(sensor), None) != None}}'
     - '{{0 < as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
       ~ '' '' ~ manual_time) - as_timestamp(now()) <= float(seconds)}}'
     sequence:
     - delay: '{{tick_time}}'
     - choose:
       - conditions:
-        - '{{0 < state_attr(light_entity, ''brightness'') | int < end_brightness |
+        - '{{0 < state_attr(light_entity, ''brightness'') | int(0) < end_brightness |
           int}}'
-        - '{{sensor == ''none'' or as_timestamp(states(sensor)) != None}}'
+        - '{{sensor == ''none'' or as_timestamp(states(sensor), None) != None}}'
         - '{{0 < as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
           ~ '' '' ~ manual_time) - as_timestamp(now()) <= float(seconds)}}'
         sequence:
@@ -160,18 +160,18 @@ action:
                 brightness: '{{(float(end_brightness) - (float(range_brightness) *
                   (as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
                   ~ '' '' ~ manual_time) - as_timestamp(now())) / float(seconds)))
-                  | int}}'
+                  | int(0)}}'
                 color_temp: '{{(float(end_mired) + (float(start_mired) - float(end_mired))
                   * ((as_timestamp(states(sensor) if sensor != ''none'' else states(''sensor.date'')
                   ~ '' '' ~ manual_time) - as_timestamp(now())) / float(seconds)))
-                  | int}}'
+                  | int(0)}}'
               entity_id: !input 'light_entity'
           default:
           - service: light.turn_on
             data:
               brightness: '{{(float(end_brightness) - (float(range_brightness) * (as_timestamp(states(sensor)
                 if sensor != ''none'' else states(''sensor.date'') ~ '' '' ~ manual_time)
-                - as_timestamp(now())) / float(seconds))) | int}}'
+                - as_timestamp(now())) / float(seconds))) | int(0)}}'
             entity_id: !input 'light_entity'
 - choose: []
   default: !input 'post_sunrise_actions'
