Add unique_id feature (new in 2022.3)

--- a/entities/sensors/filter.yaml
+++ b/entities/sensors/filter.yaml
@@ -1,7 +1,8 @@
-- platform  : filter
-  name      : veranda_illuminancesensor_filtered
-  entity_id : sensor.veranda_illuminancesensor
+- platform: filter
+  unique_id: veranda_illuminancesensor_filtered
+  name: veranda_illuminancesensor_filtered
+  entity_id: sensor.veranda_illuminancesensor
   filters:
-    - filter        : lowpass
-      time_constant : 10
-      precision     : 0
+    - filter: lowpass
+      time_constant: 10
+      precision: 0
