--- a/entities/sensors/history_stats.yaml
+++ b/entities/sensors/history_stats.yaml
@@ -2,7 +2,7 @@
 - platform  : history_stats
   name      : stefan_time_in_office_last_monday
   entity_id : person.stefan
-  state     : "Work_Stefan"
+  state     : "Brink Harskamp"
   type      : time
   start     : "{{ as_timestamp( now().replace(hour=0, minute=0, second=0) ) - now().weekday() * 86400 }}"
   duration:
@@ -11,7 +11,7 @@
 - platform  : history_stats
   name      : stefan_time_in_office_last_tuesday
   entity_id : person.stefan
-  state     : "Work_Stefan"
+  state     : "Brink Harskamp"
   type      : time
   start     : "{{ (as_timestamp( now().replace(hour=0, minute=0, second=0) ) - (now().weekday() - 1 if now().weekday() - 1 >= 0 else now().weekday() + 6) * 86400) }}"
   duration:
@@ -20,7 +20,7 @@
 - platform  : history_stats
   name      : stefan_time_in_office_last_wednesday
   entity_id : person.stefan
-  state     : "Work_Stefan"
+  state     : "Brink Harskamp"
   type      : time
   start     : "{{ (as_timestamp( now().replace(hour=0, minute=0, second=0) ) - (now().weekday() - 2 if now().weekday() - 2 >= 0 else now().weekday() + 5) * 86400) }}"
   duration:
@@ -29,7 +29,7 @@
 - platform  : history_stats
   name      : stefan_time_in_office_last_thursday
   entity_id : person.stefan
-  state     : "Work_Stefan"
+  state     : "Brink Harskamp"
   type      : time
   start     : "{{ (as_timestamp( now().replace(hour=0, minute=0, second=0) ) - (now().weekday() - 3 if now().weekday() - 3 >= 0 else now().weekday() + 4) * 86400) }}"
   duration:
@@ -38,7 +38,7 @@
 - platform  : history_stats
   name      : stefan_time_in_office_last_friday
   entity_id : person.stefan
-  state     : "Work_Stefan"
+  state     : "Brink Harskamp"
   type      : time
   start     : "{{ (as_timestamp( now().replace(hour=0, minute=0, second=0) ) - (now().weekday() - 4 if now().weekday() - 4 >= 0 else now().weekday() + 3) * 86400) }}"
   duration:
