Remove random durations

--- a/automations/104 bathroom/auto_lights.yaml
+++ b/automations/104 bathroom/auto_lights.yaml
@@ -1,15 +1,15 @@
-- alias            : bathroom_auto_lights
-  id               : db7f7aef-5ebd-4afc-8ebc-2c225e50bdcd
+- alias: bathroom_auto_lights
+  id: db7f7aef-5ebd-4afc-8ebc-2c225e50bdcd
   trigger:
-    - platform     : time
-      at           : '22:55:00'
+    - platform: time
+      at: "22:55:11"
   condition:
-    - condition    : state
-      entity_id    : 'binary_sensor.anybody_home'
-      state        : 'off'
+    - condition: state
+      entity_id: "binary_sensor.anybody_home"
+      state: "off"
   action:
-    - service      : light.turn_on
-      entity_id    : light.bathroom_ceiling
-    - delay        : "{{ range(8 * 60, 12 * 60 + 1) | random }}"
-    - service      : light.turn_off
-      entity_id    : light.bathroom_ceiling
+    - service: light.turn_on
+      entity_id: light.bathroom_ceiling
+    - delay: "00:14:51"
+    - service: light.turn_off
+      entity_id: light.bathroom_ceiling
