--- a/automations/101 masterbedroom/auto_lights.yaml
+++ b/automations/101 masterbedroom/auto_lights.yaml
@@ -1,18 +1,18 @@
-- alias         : bedroom_master_auto_lights
-  id            : 7635cff0-cb1d-409e-9c2d-df9d4a5b0348
+- alias: bedroom_master_auto_lights
+  id: 7635cff0-cb1d-409e-9c2d-df9d4a5b0348
   trigger:
-    - platform  : time
-      at        : '23:11:00'
+    - platform: time
+      at: "23:04:42"
   condition:
-    - condition : state
-      entity_id : 'binary_sensor.anybody_home'
-      state     : 'off'
-    - condition : state
-      entity_id : binary_sensor.darkness
-      state     : 'on'
+    - condition: state
+      entity_id: "binary_sensor.anybody_home"
+      state: "off"
+    - condition: state
+      entity_id: binary_sensor.darkness
+      state: "on"
   action:
-    - service   : light.turn_on
-      entity_id : light.bedroom_master_ceiling
-    - delay     : "{{ range(8 * 60, 12 * 60 + 1) | random }}"
-    - service   : light.turn_off
-      entity_id : light.bedroom_master_ceiling
+    - service: light.turn_on
+      entity_id: light.bedroom_master_ceiling
+    - delay: "00:25:21"
+    - service: light.turn_off
+      entity_id: light.bedroom_master_ceiling
