--- a/esphome/common/sensors/wifi_signal.yaml
+++ b/esphome/common/sensors/wifi_signal.yaml
@@ -4,4 +4,7 @@ platform: wifi_signal
 id: sensor_wifi_signal
 name: "${name} WiFi Signal"
 update_interval: 300s
+entity_category: diagnostic
+state_class: measurement
+disabled_by_default: true
 internal: true
