--- a/esphome/common/sensors/wifi_signal_percentage.yaml
+++ b/esphome/common/sensors/wifi_signal_percentage.yaml
@@ -7,6 +7,7 @@ name: "${name} WiFi Signal %"
 icon: "mdi:wifi"
 unit_of_measurement: "%"
 entity_category: diagnostic
+state_class: measurement
 update_interval: never
 filters:
   - sliding_window_moving_average:
